--- a/gb/22/1/18/n13512190.md
+++ b/gb/22/1/18/n13512190.md
@@ -1,65 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zhhqsq3413/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>传统制茶技术新应用  蔬菜粉变身新兴健康饮料</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13512192-537729-600x400.jpg" />
 <h6>蔬菜果粉。（茶改场提供）
 </h6>
 <hr>
 <p>【大纪元2022年01月18日讯】（大纪元记者徐乃义台湾桃园报导）新鲜绿色蔬菜 (如甘薯叶、菠菜) 含有许多抗氧化物质 (ex:多酚类)和机能性成分(ex:叶黄素、叶绿素)，但鲜叶保存期短，且需经烹饪后方可食用，故在使用便利性上有其限制性。</p>
-<figure id="13512193" aria-describedby="caption-13512193" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/01/id13512193-537730-450x285.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/01/id13512193-537730-450x285.jpg" alt="本技术产品与市售产品之比较。" width="500" /></a><figcaption id="caption-13512193" class="wp-caption-text">本技术产品与市售产品之比较。<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E8%8C%B6%E6%94%B9%E5%9C%BA.md#1">茶改场</a>提供）</figcaption></figure>
-<p>行政院农业委员会茶业改良场 (以下简称<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E8%8C%B6%E6%94%B9%E5%9C%BA.md#1">茶改场</a>) 为方便消费者食用，成功利用制茶技术运用于开发<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E8%94%AC%E8%8F%9C%E7%B2%89.md#1">蔬菜粉</a>茶加工，把蔬菜变成粉末调饮，除保留其原有的营养价值外，更具备便利性，消费者仅需加水冲泡后即可饮用，亦可作为天然原料应用于面条、包子、馒头等加工食品，极具应用风潮。</p>
+<figure id="13512193" aria-describedby="caption-13512193" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/01/id13512193-537730-450x285.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/01/id13512193-537730-450x285.jpg" alt="本技术产品与市售产品之比较。" width="500" /></a><figcaption id="caption-13512193" class="wp-caption-text">本技术产品与市售产品之比较。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8C%B6%E6%94%B9%E5%9C%BA.md#1">茶改场</a>提供）</figcaption></figure>
+<p>行政院农业委员会茶业改良场 (以下简称<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8C%B6%E6%94%B9%E5%9C%BA.md#1">茶改场</a>) 为方便消费者食用，成功利用制茶技术运用于开发<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%94%AC%E8%8F%9C%E7%B2%89.md#1">蔬菜粉</a>茶加工，把蔬菜变成粉末调饮，除保留其原有的营养价值外，更具备便利性，消费者仅需加水冲泡后即可饮用，亦可作为天然原料应用于面条、包子、馒头等加工食品，极具应用风潮。</p>
 <figure id="13512194" aria-describedby="caption-13512194" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/01/id13512194-537731-450x337.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/01/id13512194-537731-450x337.jpg" alt="汗臭改善状况的评分表现趋势。" width="500" /></a><figcaption id="caption-13512194" class="wp-caption-text">汗臭改善状况的评分表现趋势。（茶改场提供）</figcaption></figure>
-<p>茶改场长苏宗振指出，为提高农产品之加工加值及多元利用，该场利用传统茶叶加工过程之干燥与磨粉核心技术，进一步运用于蔬菜类。透过茶改场之技术，不仅可去除蔬菜之草青味，更于加水冲泡即可直接饮用极为便利，除可获得蔬菜之营养成分，亦可提升饮料之风味；此外，加工后之<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E8%94%AC%E8%8F%9C%E7%B2%89.md#1">蔬菜粉</a>其保存期限亦较未加工之新鲜蔬菜长，可提升农产品加工加值效益。以甘薯叶粉为例，本场加工技术产品较市售加工产品具有较高的抗氧化能力、色泽鲜绿且风味亦佳，其抗氧化能力是一般的3倍。</p>
+<p>茶改场长苏宗振指出，为提高农产品之加工加值及多元利用，该场利用传统茶叶加工过程之干燥与磨粉核心技术，进一步运用于蔬菜类。透过茶改场之技术，不仅可去除蔬菜之草青味，更于加水冲泡即可直接饮用极为便利，除可获得蔬菜之营养成分，亦可提升饮料之风味；此外，加工后之<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%94%AC%E8%8F%9C%E7%B2%89.md#1">蔬菜粉</a>其保存期限亦较未加工之新鲜蔬菜长，可提升农产品加工加值效益。以甘薯叶粉为例，本场加工技术产品较市售加工产品具有较高的抗氧化能力、色泽鲜绿且风味亦佳，其抗氧化能力是一般的3倍。</p>
 <p>茶改场进一步说明，该场亦委托台北医学大学利用人体试验(30人)评估综合蔬菜粉 (甘薯叶/菠菜叶黄金配比) 对改善体味之效果，统计分析三周实验期间的资料后发现，受试者自评项目中脚臭、汗臭与衣服油垢味可达显着的改善程度。</p>
-<p>茶改场表示，该场已开发新兴蔬菜粉加工技术，运用该技术及其开发产品极具发展潜力，加工后可延长保存期限且让农产品加值，其富含多种营养素、抗氧化物质及膳食纤维，且不含咖啡因等优点，亦相当适合银发族饮用，将带动<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E9%A5%AE%E6%96%99.md#1">健康饮料</a>新风潮，欢迎有意生产相关蔬菜或水果农产品之农友及企业迳洽茶改场，可先行洽谈原料加工及相关制造技术及调整方法，俾利共同推动健康饮料新市场。◇</p>
+<p>茶改场表示，该场已开发新兴蔬菜粉加工技术，运用该技术及其开发产品极具发展潜力，加工后可延长保存期限且让农产品加值，其富含多种营养素、抗氧化物质及膳食纤维，且不含咖啡因等优点，亦相当适合银发族饮用，将带动<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E9%A5%AE%E6%96%99.md#1">健康饮料</a>新风潮，欢迎有意生产相关蔬菜或水果农产品之农友及企业迳洽茶改场，可先行洽谈原料加工及相关制造技术及调整方法，俾利共同推动健康饮料新市场。◇</p>
 <p>责任编辑：李悦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/6/22/n10503911.md#1">台湾茶后起之秀 GABA乌龙茶 风味全球迷</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/19/12/17/n11727683.md#1">辅导开发茶及饮料多元品 开创农产加值新契机</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/2/20/n11882118.md#1">未来食品产业新明星  茶改场蔬果粉鲜绿营养</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/3/31/n12847881.md#1">解决农民问题 茶改场茶及饮料作物技术咨询会</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/9/3/n13208317.md#1">台湾首款紫芽茶树台茶25号 品茶兼赏株</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/9/12/n13227563.md#1">茶改场推动“本土化、科技化、国际化”产业</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/7/n13627509.md#1">“电电”吃三碗公  一探究竟电疗</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/7/n13627785.md#1">国际排名挂保证 中原大学理科排名全国第4</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/7/n13627844.md#1">首座原住民族住宿式长照机构开工  长者照护</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/7/n13627778.md#1">桃园米迪幼儿园渐收敛  37处接种站免预约施打</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/22/n10503911.md#1">台湾茶后起之秀 GABA乌龙茶 风味全球迷</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/17/n11727683.md#1">辅导开发茶及饮料多元品 开创农产加值新契机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/20/n11882118.md#1">未来食品产业新明星  茶改场蔬果粉鲜绿营养</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/31/n12847881.md#1">解决农民问题 茶改场茶及饮料作物技术咨询会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/3/n13208317.md#1">台湾首款紫芽茶树台茶25号 品茶兼赏株</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/12/n13227563.md#1">茶改场推动“本土化、科技化、国际化”产业</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/17/n13510481.md#1">桃园捕蜂捉蛇业务义消执行 全国首创</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/17/n13510245.md#1">经济部PCB工程师认证考试 元智化材系通过率居全台之冠</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/17/n13510114.md#1">桃消防局受赠二氧化碳监测仪及电动骨针针具</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/17/n13510010.md#1">西堤群聚恐再扩大 桃市采检站累计采检28,453人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/26/n11004578.md#1" target="_blank">林辉：宁跳珠江也不批孔子的金石界大家</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232059.md#1" target="_blank">大陆移民旧金山推崇法轮功：真善忍好</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023623.md#1" target="_blank">车祸后30年行走困难 读《转法轮》4个月“开跑”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13607219.md#1">最是美丽的季节  错过了惊蛰将错过什么呢？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13607564.md#1">【思想领袖】马龙：打疫苗越多 为何感染风险越大</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625018.md#1">【舞蹈三剑客】《换颜水》精彩幕后：什么？这是一天内完成排演的？！</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622771.md#1">伊能静庆53岁生日 与5岁女儿合照宛如姐妹</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624705.md#1">应对俄飞机坦克 美援乌武器清单曝光</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623663.md#1">FDA首次公开辉瑞疫苗数据 副作用1,291种</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622771.md#1">伊能静庆53岁生日 与5岁女儿合照宛如姐妹</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622910.md#1">郑欣宜居家避疫仍化妆 靠生酮饮食减重20磅</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623650.md#1">CUBE娱乐与徐穗珍解约 公布霸凌案调查结果</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13606756.md#1">吃蔬菜能增肌！专家：比肉类对肌肉更好</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/3/n13618986.md#1">银发族早餐养生粥 补中气、助排便、防疾病</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622027.md#1">西兰花让动脉变柔软！六大蔬菜保护心脏</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13621644.md#1">如何让浴室的卫浴设备一尘不染</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624142.md#1">【健康1+1】比尔盖茨：下场流行将至 疫苗过时？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/18/n13512190.htm">传统制茶技术新应用  蔬菜粉变身新兴健康饮料</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/18/n13512190.htm">传统制茶技术新应用  蔬菜粉变身新兴健康饮料</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zhhqsq3413/djy/blob/master/gb/22/1/18/n13512190.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/1/18/n13512190.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
